<resources>
    <string name="app_name">apps_siadin</string>
    <string name="splash_screen_title">Siadin Mahasiswa</string>
    <string name="hint_nim">NIM</string>
    <string name="hint_password">Password</string>
    <string name="forgot_password">Lupa Password?</string>
    <string name="login">Login</string>
    <string name="informasi_login">Informasi Login</string>
    <string name="info_login_isi">Akun yang disediakan kampus adalah SIADIN (NIM: A11.2016.11111 ; Password: passwordsiadin)</string>
    <string name="info_logo_isi_2">Email Mahasiswa merupakan penunjang saja (email: 111201611111@mhs.dinus.ac.id ; password: passwordemailmhs)</string>
    <string name="fp_title">Pemulihan Akun Anda</string>
    <string name="isi_fp">Kami dapat membantu Anda memulihkan Akun SiAdin Anda. Pertama-tama, Silakan isi informasi yang dibutuhkan melalui form berikut ini. Proses ini memerlukan email mhs Anda.</string>
    <string name="nim_npp">NIM/NPP</string>
    <string name="batal_btn">Batal</string>
    <string name="next_btn">Selanjutnya</string>
    <string name="dashboard_title">Dashboard</string>
    <string name="img_profile">img_profile</string>
    <string name="name_mhs">Muhammad Neivan</string>
    <string name="nim_mhs">A11.2020.12655</string>
    <string name="email_mhs">111202012656@mhs.dinus.ac.id</string>
    <string name="dashboard">Dashboard</string>
    <string name="dokumen">Dokumen</string>
    <string name="kalender">Kalender</string>
    <string name="profil">Profil</string>
    <string name="biodata">Biodata</string>
    <string name="hari_terkini">Hari Terkini</string>
    <string name="hari_tanggal">Hari Tanggal</string>
    <string name="daftar_pelajaran">Daftar Pelajaran</string>
    <string name="matkul_value">Matematika Diskrit</string>
    <string name="data_perkuliahan">Data Perkuliahan</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nid_dinus">nid_dinus</string>
    <string name="nm_klmpk_kul">nm_klmpk_kul</string>
    <string name="jns_maktul">jns_maktul</string>
    <string name="sks">SKS</string>
    <string name="matkul">matkul</string>
    <string name="sisa_masa_studi_ideal">Sisa Masa Studi Ideal</string>
    <string name="years">2 Tahun 11 Bulan 3 Hari</string>
    <string name="edit_biodata">Edit Biodata</string>
    <string name="laporan_belajar">Laporan Belajar</string>
    <string name="keuangan">Keuangan</string>
    <string name="pengumuman">Pengumuman</string>
    <string name="agenda_tanggal_berikut">Agenda Tanggal Berikut</string>
    <string name="jadwal_akademik_2021">Jadwal Akademik 2021</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="daftarkan">Daftarkan</string>
    <string name="nama_mahasiswa">Nama Mahasiswa</string>
    <string name="email_mahasiswa">Email Mahasiswa</string>
    <string name="kamu_mahasiswa_udinus">Kamu Mahasiswa Udinus ?</string>
    <string name="silahkan_login">Silahkan Login</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="masuk_tanpa_login">Masuk Tanpa Login</string>
    <string name="Nama">Nama</string>
</resources>