<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#052E58"
    android:orientation="vertical"
    tools:context=".screens.ProfileScreen">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        android:translationZ="0.1dp"
        app:elevation="0dp">

        <include
            layout="@layout/appbar_profile"/>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="23dp"
                android:layout_marginTop="34dp"
                tools:ignore="RtlSymmetry,UselessParent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/profile_mhs"
                    android:contentDescription="@string/img_profile" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="22dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_nama_mhs"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_bold"
                        android:textColor="@color/white"
                        android:text="@string/name_mhs"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_nim_mhs"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:textColor="@color/white"
                        android:text="@string/nim_mhs"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_email_mhs"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:textColor="@color/white"
                        android:text="@string/email_mhs"
                        android:textSize="14sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/_17sdp"
                android:layout_marginTop="@dimen/_11sdp"
                android:layout_marginBottom="@dimen/_12sdp"
                android:orientation="vertical"
                tools:ignore="RtlSymmetry">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="9dp"
                    android:text="@string/sisa_masa_studi_ideal"
                    android:textSize="14sp"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/years"
                    android:textSize="14sp"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="#0FCE2E" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_450sdp"
                android:background="@drawable/profile_container"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/edt_bdta"
                    android:layout_width="match_parent"
                    android:layout_height="59dp"
                    android:layout_marginTop="@dimen/_18sdp"
                    android:layout_marginHorizontal="@dimen/_23sdp"
                    android:clickable="true"
                    android:drawableStart="@drawable/ic_biodata"
                    android:paddingEnd="@dimen/_18sdp"
                    android:drawablePadding="20dp"
                    android:textAlignment="textStart"
                    android:paddingStart="@dimen/_18sdp"
                    android:text="@string/edit_biodata"
                    android:textAllCaps="false"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="@color/black"
                    android:background="@drawable/bg_btn_proflie_menu"
                    tools:ignore="RtlSymmetry" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/lprn_bljr"
                    android:layout_width="match_parent"
                    android:layout_height="59dp"
                    android:layout_marginTop="@dimen/_18sdp"
                    android:layout_marginHorizontal="@dimen/_23sdp"
                    android:clickable="true"
                    android:drawableStart="@drawable/ic_lprn_bljr"
                    android:drawablePadding="20dp"
                    android:textAlignment="textStart"
                    android:paddingStart="@dimen/_18sdp"
                    android:text="@string/laporan_belajar"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:fontFamily="@font/poppins_medium"
                    android:background="@drawable/bg_btn_proflie_menu"
                    tools:ignore="RtlSymmetry" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/settings"
                    android:layout_width="match_parent"
                    android:layout_height="59dp"
                    android:layout_marginTop="@dimen/_18sdp"
                    android:layout_marginHorizontal="@dimen/_23sdp"
                    android:clickable="true"
                    android:drawableStart="@drawable/ic_settings"
                    android:drawablePadding="@dimen/_10sdp"
                    android:textAlignment="textStart"
                    android:paddingStart="@dimen/_18sdp"
                    android:text="@string/pengaturan"
                    android:textAllCaps="false"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="@color/black"
                    android:background="@drawable/bg_btn_proflie_menu"
                    tools:ignore="RtlSymmetry" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/announcement"
                    android:layout_width="match_parent"
                    android:layout_height="59dp"
                    android:layout_marginTop="@dimen/_18sdp"
                    android:layout_marginHorizontal="@dimen/_23sdp"
                    android:clickable="true"
                    android:drawableStart="@drawable/ic_announcement"
                    android:drawablePadding="20dp"
                    android:textAlignment="textStart"
                    android:paddingStart="@dimen/_15sdp"
                    android:text="@string/pengumuman"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:fontFamily="@font/poppins_medium"
                    android:background="@drawable/bg_btn_proflie_menu"
                    tools:ignore="RtlSymmetry" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/money"
                    android:layout_width="match_parent"
                    android:layout_height="59dp"
                    android:layout_marginTop="@dimen/_18sdp"
                    android:layout_marginHorizontal="@dimen/_23sdp"
                    android:clickable="true"
                    android:drawableStart="@drawable/ic_money"
                    android:drawablePadding="20dp"
                    android:textAlignment="textStart"
                    android:paddingStart="@dimen/_18sdp"
                    android:text="@string/keuangan"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:fontFamily="@font/poppins_medium"
                    android:background="@drawable/bg_btn_proflie_menu"
                    tools:ignore="RtlSymmetry" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/logout_btn"
                    android:layout_width="match_parent"
                    android:layout_height="59dp"
                    android:layout_marginTop="@dimen/_18sdp"
                    android:layout_marginHorizontal="@dimen/_23sdp"
                    android:clickable="true"
                    android:drawableStart="@drawable/ic_logout"
                    android:drawablePadding="20dp"
                    android:textAlignment="textStart"
                    android:paddingStart="@dimen/_18sdp"
                    android:text="@string/logout"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:fontFamily="@font/poppins_medium"
                    android:background="@drawable/bg_btn_proflie_menu"
                    tools:ignore="RtlSymmetry" />


            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</LinearLayout>