<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_screen_background"
    tools:context=".loginandregistercomponents.ForgotPasswordScreen">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/poppins_bold"
        android:paddingTop="55dp"
        android:paddingBottom="55dp"
        android:text="@string/fp_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:fontFamily="@font/poppins_regular"
        android:paddingHorizontal="36dp"
        android:text="@string/isi_fp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView2"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginHorizontal="41dp"
        android:background="@drawable/edit_text"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/nim_npp"
        android:paddingStart="22dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView"
        app:layout_constraintVertical_bias="0.223"
        tools:ignore="MissingConstraints,RtlSymmetry" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        app:layout_constraintVertical_bias="0.441">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancel_button"
            android:layout_width="140dp"
            android:layout_height="48dp"
            android:layout_marginEnd="13dp"
            android:background="@drawable/cancel_btn"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/batal_btn"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.566"
            tools:ignore="MissingConstraints" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/next_button"
            android:layout_width="140dp"
            android:layout_height="48dp"
            android:background="@drawable/login_btn"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/next_btn"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.566"
            tools:ignore="MissingConstraints" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>